--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "test-js",
+  "name": "basic-node-express",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/main.cjs.js",
   "scripts": {
     "build": "./node_modules/.bin/rollup -c rollup.js",
     "transpile-test": "./node_modules/.bin/rollup -c rollup.test.js",
@@ -21,9 +21,13 @@
     "nyc": "^10.3.2",
     "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-eslint": "^3.0.0",
     "rollup-plugin-multi-entry": "^2.0.1",
     "rollup-plugin-uglify": "^2.0.1",
     "sinon": "^2.3.1"
+  },
+  "dependencies": {
+    "express": "^4.15.3"
   }
 }
